[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawctl"
version = "0.1.0"
description = "Simple CLI to manage OpenClaw Docker containers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "docker>=7.1.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
clawctl = "clawctl:main"
