[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-k"
version = "0.1.0"
description = "OpenClaw user/container manager with CLI + API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "docker>=7.1.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
openclaw-k = "openclaw_k:main"

[tool.setuptools]
py-modules = ["openclaw_k"]
